--- a/modules/account_invoice_cog/locale/fr_FR.po
+++ b/modules/account_invoice_cog/locale/fr_FR.po
@@ -33,3 +33,132 @@ msgstr "Jeux de Test"
 msgctxt "model:res.group,name:group_invoice_read"
 msgid "Invoice consultation"
 msgstr "Consultation des quittances"
+
+# Custom translations below
+
+msgctxt "field:account.invoice-account.move.line,invoice:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "field:account.invoice.line,invoice:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "field:account.invoice.pay.ask,invoice:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "field:account.invoice,reconciled:account_invoice."
+msgid "Reconciled"
+msgstr "Lettrée"
+
+msgctxt "field:account.invoice.tax,invoice:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "field:party.address,invoice:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "error:account.invoice.credit:account_invoice."
+msgid "You can not credit with refund invoice \"%s\" because it is not posted."
+msgstr ""
+"Vous ne pouvez faire une note de crédit pour la facture « %s » car elle "
+"n'est pas lettrée."
+
+msgctxt "model:account.invoice.line,name:account_invoice."
+msgid "Invoice Line"
+msgstr "Ligne de quittance"
+
+msgctxt "model:account.invoice,name:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_in_invoice_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_in_credit_note_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_out_credit_note_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:account_invoice.act_invoice_out_invoice_domain_posted"
+msgid "Posted"
+msgstr "Emis"
+
+msgctxt "model:ir.action,name:account_invoice.act_invoice_form"
+msgid "Invoices"
+msgstr "Quittances"
+
+msgctxt "model:ir.action,name:account_invoice.act_invoice_out_invoice_form"
+msgid "Invoices"
+msgstr "Quittances"
+
+msgctxt "model:ir.action,name:account_invoice.print"
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "model:ir.action,name:account_invoice.report_invoice"
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "model:ir.action,name:account_invoice.act_invoice_form2"
+msgid "Invoices"
+msgstr "Quittances"
+
+msgctxt ""
+"model:ir.sequence.type,name:account_invoice.sequence_type_account_invoice"
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "model:ir.ui.menu,name:account_invoice.menu_invoice_out_invoice_form"
+msgid "Invoices"
+msgstr "Quittances"
+
+msgctxt "model:ir.ui.menu,name:account_invoice.menu_invoices"
+msgid "Invoices"
+msgstr "Quittances"
+
+msgctxt "selection:account.invoice.line,invoice_type:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "selection:account.invoice,state:account_invoice."
+msgid "Posted"
+msgstr "Emise"
+
+msgctxt "selection:account.invoice,state:account_invoice."
+msgid "Canceled"
+msgstr "Annulée"
+
+msgctxt "selection:account.invoice,state:account_invoice."
+msgid "Validated"
+msgstr "Validée"
+
+msgctxt "selection:account.invoice,type:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "view:account.invoice:account_invoice."
+msgid "Invoice"
+msgstr "Quittance"
+
+msgctxt "view:account.invoice:account_invoice."
+msgid "_Post"
+msgstr "Emettre"
+
+msgctxt "view:account.invoice:account_invoice."
+msgid "Invoices"
+msgstr "Quittances"
+
+msgctxt "view:account.invoice.line:account_invoice."
+msgid "Invoice Lines"
+msgstr "Lignes de quittance"
