--- a/modules/account_cog/CHANGELOG
+++ b/modules/account_cog/CHANGELOG
@@ -1,3 +1,4 @@
+* Differentiate money direction with field (payable/receivable) and not with sign
 * New simplified party balance with colors and icons
 
 Version 1.4 - 2015-05-29
