rule_engine : Fix debug message translation

--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -46,9 +46,12 @@ msgid ""
 "Error info :\n"
 "%s"
 msgstr ""
-"Une erreur s'est produite lors de l'exécution de la règle %s.\\nPour "
+"Une erreur s'est produite lors de l'exécution de la règle %s. Pour "
 "davantage d'informations, veuillez activer le mode debug de la règle et "
-"consulter les logs.\\n\\nInformations sur l'erreur :\\n%s"
+"consulter les logs.\n"
+"\n"
+"Informations sur l'erreur :\n"
+"%s"
 
 msgctxt "error:rule_engine:"
 msgid "Expected %s as a parameter"
