loan: Add warning on loan if last payment is way different from last increment payment amount Fix #2204 review: http://rietveld.coopengo.com/17210003/

--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -950,6 +950,10 @@ msgid "Loans"
 msgstr "Prêts"
 
 msgctxt "view:loan:"
+msgid "Please check the last payment"
+msgstr "Merci de vérifier la dernière échéance"
+
+msgctxt "view:loan:"
 msgid "Quota share"
 msgstr "Quotité"
 
