contract: improve contact management Fix #2340: https://redmine.coopengo.com/issues/2340 http://rietveld.coopengo.com/15260004

--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -367,6 +367,14 @@ msgctxt "field:contract.contact,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
+msgctxt "field:contract.contact,date:"
+msgid "Date"
+msgstr "Date"
+
+msgctxt "field:contract.contact,end_date:"
+msgid "End Date"
+msgstr "Date de Fin"
+
 msgctxt "field:contract.contact,id:"
 msgid "ID"
 msgstr "ID"
