--- a/modules/endorsement/locale/fr_FR.po
+++ b/modules/endorsement/locale/fr_FR.po
@@ -140,20 +140,12 @@ msgid "The code must be unique!"
 msgstr "Le code doit être unique !"
 
 msgctxt "error:endorsement:"
-msgid "Everything is good !"
-msgstr "Tout est bon!"
-
-msgctxt "error:endorsement:"
 msgid "Invalid file format"
 msgstr "Format de fichier non valide"
 
 msgctxt "error:endorsement:"
 msgid "No sequence defined in configuration"
 msgstr "Pas de séquence définie dans la configuration"
-
-msgctxt "error:endorsement:"
-msgid "Object %s is currently locked by user %s"
-msgstr "L'objet %s est verrouillé par l'utilisateur %s"
 
 msgctxt "error:endorsement:"
 msgid "The endorsement number must be unique."
@@ -223,18 +215,6 @@ msgctxt "field:endorsement,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-msgctxt "field:endorsement,current_log:"
-msgid "Current Log"
-msgstr "Trace Courante"
-
-msgctxt "field:endorsement,current_state:"
-msgid "Current State"
-msgstr "Etat Courant"
-
-msgctxt "field:endorsement,current_state_name:"
-msgid "Current State In Process"
-msgstr "Etat courant au sein du processus"
-
 msgctxt "field:endorsement,definition:"
 msgid "Definition"
 msgstr "Définition"
@@ -258,10 +238,6 @@ msgstr "Avenants générés"
 msgctxt "field:endorsement,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:endorsement,logs:"
-msgid "Task"
-msgstr "Tâche"
 
 msgctxt "field:endorsement,number:"
 msgid "Number"
@@ -1670,7 +1646,7 @@ msgid "Endorsement Sub-state"
 msgstr "Sous état d'avenant"
 
 msgctxt "model:ir.ui.menu,name:menu_configuration"
-msgid "Configuration"
+msgid "Endorsement Configuration"
 msgstr "Configuration d'avenant"
 
 msgctxt "model:ir.ui.menu,name:menu_endorsement_definition"
@@ -1788,10 +1764,6 @@ msgstr "Option"
 msgctxt "selection:endorsement.sub_state,state:"
 msgid "Declined"
 msgstr "Décliné"
-
-msgctxt "selection:process,kind:"
-msgid "Contract Endorsement"
-msgstr "Avenant au contrat"
 
 msgctxt "view:contract:"
 msgid "Start Endorsement"
@@ -2039,13 +2011,14 @@ msgctxt ""
 msgid "Previous"
 msgstr "Précédent"
 
+msgctxt ""
+"wizard_button:endorsement.start,change_start_date,change_start_date_suspend:"
+msgid "Suspend"
+msgstr "Suspendre"
+
 msgctxt "wizard_button:endorsement.start,change_start_date,end:"
 msgid "Cancel"
 msgstr "Annuler"
-
-msgctxt "wizard_button:endorsement.start,change_start_date,suspend:"
-msgid "Suspend"
-msgstr "Suspendre"
 
 msgctxt "wizard_button:endorsement.start,select_endorsement,cancel:"
 msgid "Cancel"
