account_invoice_cog: Add default customer payment term in configuration Fix #2405: https://redmine.coopengo.com/issues/2405 http://rietveld.coopengo.com/10660002

--- a/modules/account_invoice_cog/CHANGELOG
+++ b/modules/account_invoice_cog/CHANGELOG
@@ -1,4 +1,6 @@
+* Allow to define default payment term for customer invoice in configuration
 * Make invoice printable
+
 Version 1.4 - 2015-05-29
 * New icons based on state for invoice
 
