commission_insurance: Add default payment term for commission invoice in conf http://rietveld.coopengo.com/10660003

--- a/modules/commission_insurance/CHANGELOG
+++ b/modules/commission_insurance/CHANGELOG
@@ -1,3 +1,4 @@
+* Allow to define default payment term for commission invoice in configuration
 * Display commission rate on commission
 
 Version 1.4 - 2015-05-29
