contract : Add cache on contract.sub_status
review http://rietveld.coopengo.com/16380001

--- a/modules/contract/CHANGELOG
+++ b/modules/contract/CHANGELOG
@@ -1,3 +1,4 @@
+* Add cache on contract.sub_status
 * Add contract.option.version and move extra_data in contract module
 * Voiding a contract preserves initial_start_date and activation_history
 * Add sub_status to option
