--- a/modules/loan/CHANGELOG
+++ b/modules/loan/CHANGELOG
@@ -1,3 +1,4 @@
+* Allow to insert manual increments to modify the loan at effective date (reimbursement, rate modification...)
 * Add warning on loan if last payment is way different from last increment payment amount
 * Allow to have different payment frequency during the life of the loan (one per increment)
 * Allow to enter the loan duration in month or year, regardless of the payment frequency
